Fix header spacing

--- a/stub/static/content-blocks/footer.scss
+++ b/stub/static/content-blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    margin: var(--space-xxxl) var(--gap);
+    padding: var(--space-xxxl) var(--gap);
 
     &__content {
         display: flex;
