--- a/stub/static/content-blocks/header.scss
+++ b/stub/static/content-blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-    margin: var(--space-xxxl) var(--gap);
+    padding: var(--space-xxxl) var(--gap);
 
     &__logo {
         width: 179px;
